--- a/src/app/shoe-list/shoe-list.component.html
+++ b/src/app/shoe-list/shoe-list.component.html
@@ -1,1 +1,4 @@
-<p>shoe-list works!</p>
+<app-shoe-list-item></app-shoe-list-item>
+<app-shoe-list-item></app-shoe-list-item>
+<app-shoe-list-item></app-shoe-list-item>
+<app-shoe-list-item></app-shoe-list-item>
