--- a/src/app/shoe-list/shoe-list.component.html
+++ b/src/app/shoe-list/shoe-list.component.html
@@ -1,3 +1,3 @@
-<div *ngFor="let shoe of shoeList" >
-  <app-shoe-list-item [shoe]="shoe" ></app-shoe-list-item>
+<div *ngFor="let shoe of shoeList; let i = index">
+  <app-shoe-list-item [shoe]="shoe" [index]="i"></app-shoe-list-item>
 </div>
