--- a/src/app/shoe-list-item/shoe-list-item.component.html
+++ b/src/app/shoe-list-item/shoe-list-item.component.html
@@ -1,8 +1,8 @@
-<div class="content-list-item" [ngStyle]="{'background-color': (index ?? 0) % 2 === 0 ? 'blue' : 'grey'}">
-  <h2>{{ shoe.name }}</h2>
+<div *ngIf="shoe" class="pet-info">
+<h2>{{ shoe.name }}</h2>
   <p><strong>ID:</strong> {{ shoe.id }}</p>
-  <p><strong>Description:</strong> {{ shoe.description ? shoe.description : 'No description available' }}</p>
+  <p><strong>Description:</strong> {{ shoe.description }}</p>
   <p><strong>Date:</strong> {{ shoe.date }}</p>
   <p><strong>Quantity:</strong> {{ shoe.quantity }}</p>
-  <hr /> <!-- Optional horizontal line for separation -->
+
 </div>
