Assignment 4 Final Commit

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<div class="app-container">
+<app-shoe-list-item [shoe]="firstList"></app-shoe-list-item>
   <app-shoe-list></app-shoe-list>
-</div>
 
