--- a/src/app/shoe-list-item/shoe-list-item.component.html
+++ b/src/app/shoe-list-item/shoe-list-item.component.html
@@ -1,8 +1,8 @@
-<div *ngIf="shoe" class="pet-info">
+<div *ngIf="shoe" class="shoe-style">
 <h2>{{ shoe.name }}</h2>
   <p><strong>ID:</strong> {{ shoe.id }}</p>
   <p><strong>Description:</strong> {{ shoe.description }}</p>
-  <p><strong>Date:</strong> {{ shoe.date }}</p>
+  <p><strong>Date:</strong> {{ shoe.Date }}</p>
   <p><strong>Quantity:</strong> {{ shoe.quantity }}</p>
 
 </div>
