--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
-<app-shoe-list-item [shoe]="firstList"></app-shoe-list-item>
-  <app-shoe-list></app-shoe-list>
+<div class="nav-bar">
+  <nav>
+    <a routerLink="/shoes" routerLinkActive="active">Shoe Gallery</a>
+    <a routerLink="/modify-student" routerLinkActive="active">Modify Shoe</a>
+  </nav>
+</div>
+<router-outlet></router-outlet>
+
 
