--- a/src/app/shoe-list-item/shoe-list-item.component.html
+++ b/src/app/shoe-list-item/shoe-list-item.component.html
@@ -4,5 +4,7 @@
   <p><strong>Description:</strong> {{ shoe.description }}</p>
   <p><strong>Date:</strong> {{ shoe.Date }}</p>
   <p><strong>Quantity:</strong> {{ shoe.quantity }}</p>
+  <img src="Gallery/Shoe{{shoe.id}}.png" alt="Shoes images">
 
 </div>
+
